replace decrecated constructor cales with ###.valueOf calles