@@ -115,12 +115,12 @@ public class ProjektSaldoList extends TablePart implements Part
     Double einnahmen;
     Double ausgaben;
     Double umbuchungen;
-    Double suBukEinnahmen = new Double(0);
-    Double suBukAusgaben = new Double(0);
-    Double suBukUmbuchungen = new Double(0);
-    Double suEinnahmen = new Double(0);
-    Double suAusgaben = new Double(0);
-    Double suUmbuchungen = new Double(0);
+    Double suBukEinnahmen = Double.valueOf(0.0d);
+    Double suBukAusgaben = Double.valueOf(0.0d);
+    Double suBukUmbuchungen = Double.valueOf(0.0d);
+    Double suEinnahmen = Double.valueOf(0.0d);
+    Double suAusgaben = Double.valueOf(0.0d);
+    Double suUmbuchungen = Double.valueOf(0.0d);
 
     ResultSetExtractor rsd = new ResultSetExtractor()
     {
@@ -129,9 +129,9 @@ public class ProjektSaldoList extends TablePart implements Part
       {
         if (!rs.next())
         {
-          return new Double(0);
+          return Double.valueOf(0.0d);
         }
-        return new Double(rs.getDouble(1));
+        return Double.valueOf(rs.getDouble(1));
       }
     };
     ResultSetExtractor rsi = new ResultSetExtractor()
@@ -163,9 +163,9 @@ public class ProjektSaldoList extends TablePart implements Part
         DBIterator<Buchungsart> buchungsartenIt = service
             .createList(Buchungsart.class);
         buchungsartenIt.setOrder("ORDER BY nummer");
-        suBukEinnahmen = new Double(0);
-        suBukAusgaben = new Double(0);
-        suBukUmbuchungen = new Double(0);
+        suBukEinnahmen = Double.valueOf(0.0d);
+        suBukAusgaben = Double.valueOf(0.0d);
+        suBukUmbuchungen = Double.valueOf(0.0d);
 
         while (buchungsartenIt.hasNext())
         {
