@@ -386,17 +386,17 @@ public class AbrechnungSEPA_hbci4java {
 	        {
 	          list.addFilter(
 	              "(zahlungsrhytmus = ? or zahlungsrhytmus = ? or zahlungsrhytmus = ?)",
-	                  new Object[] { new Integer(Zahlungsrhythmus.HALBJAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.VIERTELJAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.MONATLICH) });
+	                  new Object[] { Integer.valueOf(Zahlungsrhythmus.HALBJAEHRLICH),
+	                		  Integer.valueOf(Zahlungsrhythmus.VIERTELJAEHRLICH),
+	                		  Integer.valueOf(Zahlungsrhythmus.MONATLICH) });
 	        }
 	        if (param.abbuchungsmodus == Abrechnungsmodi.JAVIMO)
 	        {
 	          list.addFilter(
 	              "(zahlungsrhytmus = ? or zahlungsrhytmus = ? or zahlungsrhytmus = ?)",
-	                  new Object[] { new Integer(Zahlungsrhythmus.JAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.VIERTELJAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.MONATLICH) });
+	                  new Object[] { Integer.valueOf(Zahlungsrhythmus.JAEHRLICH),
+	                		  Integer.valueOf(Zahlungsrhythmus.VIERTELJAEHRLICH),
+	                		  Integer.valueOf(Zahlungsrhythmus.MONATLICH) });
 	        }
 	        if (param.abbuchungsmodus == Abrechnungsmodi.VIMO)
 	        {
@@ -922,7 +922,7 @@ public class AbrechnungSEPA_hbci4java {
 	      }
 	      if (buchungsart != null)
 	      {
-	        buchung.setBuchungsart(new Long(buchungsart.getID()));
+	        buchung.setBuchungsart(Long.valueOf(buchungsart.getID()));
 	      }
 	      buchung.store();
 	    }
